--- a/index.css
+++ b/index.css
@@ -1,4 +1,50 @@
-#heading
-{
-    color:brown
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 15px 40px -20px rgba(40, 44, 63, .15);
+    position: fixed;
+    background: #fff;
+    width:100%;
+    height: 80px;
+    top:0;
+    left:0;
+    right:0;
+    border:grey
+
+}
+.header-logo{
+    height: -webkit-fill-available;
+    padding: 5px;
+}
+.nav-container > ul{
+    list-style-type: none;
+    display: flex;
+}
+.nav-container >ul > li{
+    margin: 10px;
+    padding: 5px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.card{
+    background-color: #f0f0f0;
+    margin: 5px;
+    width:200px;
+}
+
+.res-card-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 100px;
+}
+.res-img{
+    width: 100%;
+    height:50%;
+    margin-bottom:20px;
+}
+.body{
+    padding-left: 20px;
+    padding-right: 20px;
 }
